# faker-pokemon

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: update_data.py
src/faker_pokemon/: __init__.py  pokemon_data.py  provider.py
tests/: test_provider.py
